There should be a click event where form should no longer be visible on the UI once the button is clicked.

--- a/app.css
+++ b/app.css
@@ -161,7 +161,15 @@ select {
     transition: ease 0.3s all;
 }
 
-#compare:hover {
+#compare-again {
+    display: none;
+    background: #ccc;
+    padding: 0.8em;
+    margin: 1.2em auto;
+    transition: ease 0.3s all;
+}
+
+#compare:hover, #compare-again {
     background: #777;
     color: #fff;
     cursor: pointer;
